# whisper-rabbit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
claude/commands/: 회의녹음정리.md
scripts/: install.ps1
src/whisper_rabbit/: __init__.py  _io_utils.py  cli.py  device.py  formats.py  prefetch.py  recommend.py  report.py  transcribe.py
tests/: test_device.py  test_formats.py  test_recommend.py  test_report.py
