[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-rabbit"
version = "0.1.0"
description = "faster-whisper 기반 회의 녹음 받아쓰기 + Claude Code 슬래시 커맨드 통합"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "kdt" }]
keywords = ["whisper", "faster-whisper", "transcription", "meeting", "claude-code"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = [
    "faster-whisper>=1.2.0",
    "python-docx>=1.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
whisper-rabbit = "whisper_rabbit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
